Closes #63: Jenkins scalastyle integration with commit refusal (#111)
* Closes #63: removes testing from sbt assembly call and makes scalastyle cause errors instead of warning

* Refs #63: adds test directories to scalastyle sources

* Refs #63: adds test directories to scalastyle sources

* Refs #63: fixes scalastyle violation