@@ -1,25 +1,25 @@
 lazy val root = (project in file(".")).
-  settings(
-    name := "VersionControl",
-    version := "1.0",
-    scalaVersion := "2.10.5",
-    mainClass in Compile := Some("VersionDiff")
-  )
+settings(
+	name := "VersionControl",
+	version := "1.0",
+	scalaVersion := "2.11.8",
+	mainClass in Compile := Some("VersionDiff")
+)
 
 resolvers ++= Seq(
-  "Spark Packages Repo" at "https://dl.bintray.com/spark-packages/maven",
-  "Typesafe Repo" at "http://repo.typesafe.com/typesafe/releases/"
+	"Spark Packages Repo" at "https://dl.bintray.com/spark-packages/maven",
+	"Typesafe Repo" at "http://repo.typesafe.com/typesafe/releases/"
 )
 
 libraryDependencies ++= Seq(
-  "org.apache.spark" %% "spark-core" % "1.6.2",
-  "com.datastax.spark" %% "spark-cassandra-connector" % "1.6.1",
-  "org.apache.spark" % "spark-sql_2.10" % "1.6.2",
-  "com.datastax.cassandra" % "cassandra-driver-core" % "3.1.2",
-  "com.typesafe.play" %% "play-json" % "2.3.0",
-  "org.scalactic" %% "scalactic" % "3.0.1",
-  "org.scalatest" %% "scalatest" % "3.0.1" % "test",
-  "com.holdenkarau" %% "spark-testing-base" % "1.6.1_0.3.3"
+	"org.apache.spark" % "spark-core_2.11" % "2.1.0" exclude("org.scalatest", "scalatest_2.11"),
+  	"com.datastax.spark" % "spark-cassandra-connector_2.11" % "2.0.0-M3",
+  	"org.apache.spark" % "spark-sql_2.11" % "2.1.0",
+  	"com.datastax.cassandra" % "cassandra-driver-core" % "3.1.3",
+	"org.scalactic" % "scalactic_2.11" % "3.0.1",
+	"org.scalatest" % "scalatest_2.11" % "3.0.1" % "test",
+	"com.holdenkarau" % "spark-testing-base_2.11" % "2.1.0_0.6.0",
+	"com.typesafe.play" %% "play-json" % "2.3.0"
 )
 
 // testing settings
@@ -27,19 +27,26 @@ logBuffered in Test := false
 parallelExecution in Test := false
 fork in Test := true
 testOptions in Test := Seq(Tests.Argument(TestFrameworks.ScalaTest, "-oD"), Tests.Argument(TestFrameworks.ScalaTest, "-u", "target/test-reports"))
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled")
+
+// disables testing for assembly
+test in assembly := {}
 
 // fat jar assembly settings
-mergeStrategy in assembly <<= (mergeStrategy in assembly) { (old) => {
-    case PathList("META-INF", xs @ _*) => MergeStrategy.discard
-    case PathList(ps @ _*) if ps.last endsWith "pom.properties" => MergeStrategy.discard
-    case x => MergeStrategy.first
-  }
+assemblyMergeStrategy in assembly := {
+	case PathList("META-INF", xs @ _*) => MergeStrategy.discard
+	case PathList(ps @ _*) if ps.last endsWith "pom.properties" => MergeStrategy.discard
+	case _ => MergeStrategy.first
 }
 
 assemblyShadeRules in assembly := Seq(
-  ShadeRule.rename("com.google.**" -> "shadeio.@1").inAll
+	ShadeRule.rename("com.google.**" -> "shadeio.@1").inAll
 )
+
+// to suppress include info and merge warnings
+logLevel in assembly := Level.Error
 
 // scalastyle config file
 scalastyleConfig := new File("../scalastyle-config.xml")
+scalastyleSources in Compile ++= (unmanagedSourceDirectories in Test).value
+
